--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <receiver android:name=".MyAlarmAdapter"/>
+        <activity android:name=".setAlarm"
+                  android:label="setAlarm"
+                  android:theme="@style/AppTheme">
+
+        </activity>
     </application>
 
 </manifest>
